--- a/src/styles/chat.module.css
+++ b/src/styles/chat.module.css
@@ -1,26 +1,32 @@
-.main {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    align-items: center;
-    padding: 6rem;
-    min-height: 100vh;
-    /* background-color: rgb(57, 82, 82); */
-   }
-
-.container {
-    /* display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    align-items: center;
-    padding: 6rem;
-    min-height: 100vh; */
+.formContainer {
+  display: flex;
+  align-items: center;
+  padding: 10px;
 }
 
-  /* .input {
-    
-  }
+.chatContainer {
+  width: 100%;
+  max-width: 900px;
+  height: 600px;
+  flex-shrink: 0;
+  border-radius: 50px;
+  border: 1px solid #000;
+  background: #0e1a47;
+  margin: 0 auto;
+}
 
-  .btn {
-    
-  } */
+.sendButton {
+  background: #007BFF;
+  color: #fff;
+  border: none;
+  border-radius: 5px;
+  padding: 8px 15px;
+  cursor: pointer;
+}
+.input {
+  flex: 1;
+  padding: 8px;
+  border: none;
+  border-radius: 5px;
+  margin-right: 10px;
+}
