--- a/src/styles/menu.module.css
+++ b/src/styles/menu.module.css
@@ -13,8 +13,9 @@
 
 .btnNavBar {
     font-size: 20px;
-    width: 311px;
-    height: 93px;
+    width: 200px;
+    height: 75px;
+    /* padding: 0 20px 0 20px; */
     flex-shrink: 0;
     border-radius: 30px;
     background: linear-gradient(180deg, #989CAD 34.38%, rgba(152, 156, 173, 0.00) 100%);
