--- a/src/styles/chat.module.css
+++ b/src/styles/chat.module.css
@@ -1,20 +1,33 @@
 .main {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    align-items: center;
-    padding: 6rem;
-    min-height: 100vh;
-    /* background-color: rgb(57, 82, 82); */
-   }
-
-.container {
     /* display: flex;
     flex-direction: column;
     justify-content: space-between;
     align-items: center;
     padding: 6rem;
     min-height: 100vh; */
+    /* background-color: rgb(57, 82, 82); */
+   }
+
+.container {
+    border-radius: 50px;
+border: 1px solid #000;
+background: #0E1A47;
+width: 901px;
+height: 761px;
+flex-shrink: 0;
+margin: 0 auto;
+    /* display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+    padding: 6rem;
+    min-height: 100vh; */
+}
+
+.messageContainer {
+    display: flex;
+    /* justify-content: space-between; */
+    margin-top: 100px;
 }
 
   /* .input {
