--- a/src/styles/chat.module.css
+++ b/src/styles/chat.module.css
@@ -1,10 +1,11 @@
-.formContainer {
+.chatContainer {
   display: flex;
   align-items: center;
-  padding: 10px;
-}
+  /* justify-content: center; */
+  /* margin: 0 auto; */
+ }
 
-.chatContainer {
+.formContainer {
   width: 100%;
   max-width: 900px;
   height: 600px;
@@ -12,7 +13,17 @@
   border-radius: 50px;
   border: 1px solid #000;
   background: #0e1a47;
-  margin: 0 auto;
+  /* margin: 0 auto; */
+}
+
+/* .main {
+  display: flex;
+} */
+
+.chatUser {
+display: flex;
+justify-content: space-between;
+width: 100%;
 }
 
 .sendButton {
@@ -23,6 +34,7 @@
   padding: 8px 15px;
   cursor: pointer;
 }
+
 .input {
   flex: 1;
   padding: 8px;
@@ -30,3 +42,4 @@
   border-radius: 5px;
   margin-right: 10px;
 }
+
