--- a/src/styles/chat.module.css
+++ b/src/styles/chat.module.css
@@ -14,11 +14,40 @@
   border: 1px solid #000;
   background: #0e1a47;
   /* margin: 0 auto; */
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  padding: 30px;
 }
 
-/* .main {
+
+.botMessage {
   display: flex;
-} */
+  align-items: center;
+}
+
+.botAvatar {
+  border-radius: 50%;
+  overflow: hidden;
+  margin-right: 10px;
+}
+
+.botAvatar img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+.botText {
+  background: #172c42; 
+  color: #fff;
+  padding: 10px;
+  border-radius: 10px;
+  max-width: 80%;
+  font-size: 16px;
+  box-shadow: 0px 3px 5px rgba(0, 0, 0, 0.2); 
+  border: 1px solid #000;
+}
 
 .chatUser {
 display: flex;
