--- a/src/styles/afirmaciones.module.css
+++ b/src/styles/afirmaciones.module.css
@@ -1,4 +1,21 @@
-.title{
-    font-size: 60px;
-    color: white;
-}
+.formContainer {
+    width: 100%;
+    max-width: 900px;
+    height: 600px;
+    flex-shrink: 0;
+    border-radius: 50px;
+    border: 1px solid #000;
+    background: #0e1a47;
+    /* margin: 0 auto; */
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    padding: 30px;
+  }
+
+  .mainContainer {
+    display: flex;
+    align-items: center;
+   }
+  
+  
