--- a/src/styles/afirmaciones.module.css
+++ b/src/styles/afirmaciones.module.css
@@ -1,7 +1,7 @@
 .formContainer {
     width: 100%;
     max-width: 900px;
-    height: 600px;
+    height: 300px;
     flex-shrink: 0;
     border-radius: 50px;
     border: 1px solid #000;
@@ -17,5 +17,40 @@
     display: flex;
     align-items: center;
    }
-  
+
+   .containerAffirmations {
+    display: flex;
+    /* justify-content: space-between; */
+    align-items: center;
+    margin-left: 20px;
+    margin-right: 20px;
+   }
+
+   .affirmationText {
+    width: 100%;
+    color: #FFF;
+    font-family: Roboto Mono;
+    font-size: 30px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: normal;
+   }
+
+   .btnGenerate{
+    display: inline-block;
+    padding: 10px 20px; /* Espaciado interno (arriba/abajo, izquierda/derecha) */
+    background-color: #182e44; /* Color de fondo del botón */
+    color: #fff; /* Color del texto del botón */
+    border: none; /* Quita el borde */
+    border-radius: 5px; /* Redondea las esquinas */
+    cursor: pointer; /* Cambia el cursor al pasar por encima */
+    font-size: 16px; /* Tamaño de fuente */
+    text-align: center; /* Centra el texto horizontalmente */
+    text-decoration: none; /* Quita el subrayado de los enlaces */
+    transition: background-color 0.3s ease, color 0.3s ease; /* Transiciones suaves de color */
+   }
+
+   .btnGenerate:hover {
+    background-color: #07284b; /* Cambia el color de fondo al pasar el cursor */
+  }
   
