espacio de relajacion y agrando emojis en el calendario

--- a/src/styles/relajacion.module.css
+++ b/src/styles/relajacion.module.css
@@ -17,5 +17,37 @@
     display: flex;
     align-items: center;
    }
+
+   .containerEjercicio1 {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+   }
+
+   .containerEjercicio2 {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+   }
+
+   .ejercicio {
+    width: 490px;
+    height: 90px;
+    flex-shrink: 0; 
+    border-radius: 30px;
+    background: linear-gradient(180deg, #3953AE 0%, rgba(29, 50, 125, 0.00) 100%);
+   }
+
+   .textStyle {
+    color: #FFF;
+    font-family: Roboto Mono;
+    font-size: 30px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: normal;
+    text-align: center;
+    margin-top: 20px;
+   }
+   
   
   
