--- a/src/styles/registroEmocional.module.css
+++ b/src/styles/registroEmocional.module.css
@@ -1,4 +1,3 @@
-
 .title {
   color: #000;
   text-align: center;
@@ -20,7 +19,7 @@
     background: linear-gradient(180deg, #6E9CF5 0%, rgba(110, 156, 245, 0.00) 100%);
     border: 1px solid #E8EDF5;
     margin: 0 auto; /* Centrar el calendario horizontalmente */
-    width: 100%;
+    width: 80%;
     /* max-width: 400px; Ajustar el ancho máximo del calendario */
   }
   
@@ -43,11 +42,15 @@
   /* Estilos para los emojis en las casillas del calendario */
   .emojiTile {
     display: flex;
-    align-items: center;
+    /* align-items: center; */
     justify-content: center;
     font-size: 20px;
   }
 
   .emotionButton{
     font-size: 50px;
+  }
+
+  .emotionSelector{
+    border: 1px solid red;
   }
