--- a/src/styles/registroEmocional.module.css
+++ b/src/styles/registroEmocional.module.css
@@ -56,12 +56,16 @@
     width: 100%;
     display: flex;
     justify-content: space-around;
+    align-items: center;
     margin-top: 20px;
   }
 
   .btnEliminar{
-    background: #3953AE;
+    /* background: #3953AE;
     color: #fff;
     border-radius: 5px;
     padding: 8px 15px;
+    height: 50px; */
+    font-size: 50px;
+    color:#fff;
   }
