--- a/src/styles/diario.module.css
+++ b/src/styles/diario.module.css
@@ -65,12 +65,13 @@ line-height: normal;
   
 
 .sendButton {
-  background: #007BFF;
+  background: #3953AE;
   color: #fff;
   border: none;
   border-radius: 5px;
   padding: 8px 15px;
-  cursor: pointer;
+  /* cursor: pointer; */
+  margin-right: 20px;
 }
 
 .input {
@@ -79,6 +80,7 @@ line-height: normal;
   border: none;
   border-radius: 5px;
   margin-right: 10px;
+  margin-left: 15px;
 }
 
 .textStyle{
@@ -93,7 +95,13 @@ font-weight: 700;
 
 .btnContainer{
   display: flex;
-  flex-direction: column;
+  /* margin-left: 10px; */
+  color:#989CAD;
+  font-size: 20px;
+}
+
+.icons{
+  margin-left: 10px;
 }
 
 
