--- a/src/styles/chat.module.css
+++ b/src/styles/chat.module.css
@@ -5,10 +5,12 @@
   /* margin: 0 auto; */
  }
 
-.formContainer {
+.prueba {
   width: 100%;
   max-width: 900px;
   height: 600px;
+  max-height: 600px;
+  overflow-y: auto;
   flex-shrink: 0;
   border-radius: 50px;
   border: 1px solid #000;
@@ -19,6 +21,55 @@
   justify-content: space-between;
   padding: 30px;
 }
+
+/* .chatMessages {
+  overflow-y: auto;
+} */
+
+/* Para navegadores webkit (Chrome, Safari) */
+.prueba::-webkit-scrollbar {
+  width: 8px;
+  height: 8px;
+  display: none;
+}
+
+/* Ponemos un color de fondo y redondeamos las esquinas del thumb */
+.prueba::-webkit-scrollbar-thumb {
+  background: #ccc;
+  border-radius: 4px;
+}
+
+/* Cambiamos el fondo y agregamos una sombra cuando esté en hover */
+.prueba::-webkit-scrollbar-thumb:hover {
+  background: #b3b3b3;
+  box-shadow: 0 0 2px 1px rgba(0, 0, 0, 0.2);
+}
+
+/* Cambiamos el fondo cuando esté en active */
+.prueba::-webkit-scrollbar-thumb:active {
+  background-color: #999999;
+}
+
+/* Para navegadores basados en Firefox */
+.prueba {
+  scrollbar-width: thin;
+  scrollbar-color: #888 #f1f1f1;
+}
+
+/* .formContainer {
+  width: 100%;
+  max-width: 900px;
+  height: 600px;
+  flex-shrink: 0;
+  border-radius: 50px;
+  border: 1px solid #000;
+  background: #0e1a47;
+   margin: 0 auto;  
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  padding: 30px;
+} */
 
 
 .botMessage {
@@ -48,6 +99,7 @@
   box-shadow: 0px 3px 5px rgba(0, 0, 0, 0.2); 
   border: 1px solid #000;
 }
+
 
 .chatUser {
 display: flex;
