--- a/src/styles/chat.module.css
+++ b/src/styles/chat.module.css
@@ -10,48 +10,49 @@
   max-width: 900px;
   height: 600px;
   max-height: 600px;
-  overflow-y: auto;
+  /* overflow-y: auto; */
   flex-shrink: 0;
-  border-radius: 50px;
+  border-radius: 20px;
   border: 1px solid #000;
   background: #0e1a47;
   /* margin: 0 auto; */
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  padding: 30px;
+  /* padding: 30px; */
+  padding: 15px 20px;
 }
 
-/* .chatMessages {
+.chatMessages {
   overflow-y: auto;
-} */
+}
 
 /* Para navegadores webkit (Chrome, Safari) */
-.prueba::-webkit-scrollbar {
+.chatMessages::-webkit-scrollbar {
   width: 8px;
   height: 8px;
-  display: none;
+  /* display: none; */
 }
 
 /* Ponemos un color de fondo y redondeamos las esquinas del thumb */
-.prueba::-webkit-scrollbar-thumb {
+.chatMessages::-webkit-scrollbar-thumb {
   background: #ccc;
   border-radius: 4px;
 }
 
 /* Cambiamos el fondo y agregamos una sombra cuando esté en hover */
-.prueba::-webkit-scrollbar-thumb:hover {
+.chatMessages::-webkit-scrollbar-thumb:hover {
   background: #b3b3b3;
   box-shadow: 0 0 2px 1px rgba(0, 0, 0, 0.2);
 }
 
 /* Cambiamos el fondo cuando esté en active */
-.prueba::-webkit-scrollbar-thumb:active {
+.chatMessages::-webkit-scrollbar-thumb:active {
   background-color: #999999;
 }
 
 /* Para navegadores basados en Firefox */
-.prueba {
+.chatMessages {
   scrollbar-width: thin;
   scrollbar-color: #888 #f1f1f1;
 }
